fixed navbar on mobile

--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -47,6 +47,17 @@ nav .container ul li.active a {
 color: #ffffff;
 }
 
+@media only screen and (max-width: 768px) {
+  nav .container {
+  padding: 8px 8px;
+}
+  nav .container ul li a {
+    padding: 10px 5px;
+  }
+
+}
+
+
 @media only screen and (max-width:992px) {
   nav .container ul li a {
     font-size: 15px;
